# mlops

./: .dockerignore  Makefile  README.md  compiled_model.pt  model.onnx  model.pt  mypy.ini  pyproject.toml
.github/workflows/: validation.yml
app/: README.md  onnx.py  torch.py
app/onnx/: app_config.py  onnx.py
app/torch/: app_config.py  torch.py
deployment/: Dockerfile.onnx  Dockerfile.torch  Dockerfile.torchserve  deployment.yaml  entrypoint.sh
model_repository/: config.pbtxt
model_repository/iris/: config.pbtxt
model_repository/iris/1/: model.onnx
notebooks/: README.md  iris.ipynb  iris_explore.ipynb  iris_optuna_tuning.ipynb  iris_test.ipynb
src/data/: __init__.py  data.py
src/inference/: __init__.py  inference.py
src/inference_onnx/: __init__.py  config.py  onnx_engine.py
src/inference_torch/: __init__.py  config.py  torch_engine.py
src/log_config/: __init__.py  log_config.py
src/models/: __init__.py  iris.py  iris_test.py  optimize_iris.py  torch_handler.py  torch_model_config.py  train_iris.py
src/train/: __init__.py  iris_test.py  optimize_iris.py  train_iris.py  train_iris_test.py
src/utils/: __init__.py  gpu_monitoring.py
tests/: README.md  benchmark_torch.py  benchmark_triton_onnx.py  inspect_onnx.py
torch_serve/: config.properties  iris.mar
triton_model_repository/iris/1/: model.onnx
